--- a/scss/main.css
+++ b/scss/main.css
@@ -11984,13 +11984,13 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-main {
+#main-page {
   background-image: url("/images/Background.png");
   width: 100%;
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  opacity: 0.5;
+  background-attachment: scroll, local;
+  opacity: 0.3;
 }/*# sourceMappingURL=main.css.map */
