--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,13 +14,13 @@ $font-family-sans-serif: cursive, sans-serif !default;
 
 //Then add additional custom code here
 
-main {
-    background-image: url("/images/Background.png");
-    width: 100%;
-    height: 100vh;    
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    opacity: 0.5;
-}
+//.image {
+//    background-image: url("/images/Background.png");
+//    width: 100%;
+//    height: 100vh;    
+//    background-position: center;
+//    background-repeat: no-repeat;
+//    background-size: cover;
+//    background-attachment: scroll, local /*fixed*/ ;
+//   opacity: 0.3;
+//}
